--- a/index.html
+++ b/index.html
@@ -1,28 +1,39 @@
-<!DOCTYPE html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html>
-    <head>
-        <title>Bootstrap 101 Template</title>
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <!-- Bootstrap -->
         <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen">
         <link href="css/aplication.css" rel="stylesheet" media="screen">
-    </head>
-    <body>
-        <ul class="nav nav-tabs">
-            <li><a href="#news" data-toggle="tab">Home</a></li>
-            <li><a href="#movies" data-toggle="tab">Movies</a></li>
-            <li><a href="#musics" data-toggle="tab">Music</a></li>
-            <li><a href="#settings" data-toggle="tab">Settings</a></li>
-        </ul>
-        <div id="content" class="container-fluid"></div>
+        <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
+        <script src="bootstrap/js/bootstrap.js"></script>
+        <script src="bootstrap/js/bootstrap.js"></script>
+        <script src="js/application.js"></script>
+        <script src="js/jquery.jcarousel.js"></script>
+<title>Insert title here</title>
+</head>
+<body>
+	<ul class="nav nav-tabs">
+    	<li><a href="#news" data-toggle="tab">Home</a></li>
+        <li><a href="#movies" data-toggle="tab">Movies</a></li>
+        <li><a href="#musics" data-toggle="tab">Music</a></li>
+        <li><a href="#settings" data-toggle="tab">Settings</a></li>
+    </ul>
+    <div id="content" class="container-fluid"></div>
         <div class="row-fluid">
             <a class="span1 control" href="#" onclick="$('#carousel').jcarousel('scroll', '-=1'); return false;">Prev (1)</a>
             <div class="span10 jcarousel" id="carousel"><ul></ul></div>
             <a class="span1 control" href="#" onclick="$('#carousel').jcarousel('scroll', '+=1'); return false;">Next (1)</a>
         </div>
-        <script src="http://code.jquery.com/jquery.js"></script>
-        <script src="bootstrap/js/bootstrap.min.js"></script>
-        <script src="js/application.js"></script>
-        <script src="js/jquery.jcarousel.js"></script>
-    </body>
+        <object id="video"
+			type="application/x-netcast-av"
+			autoStart="false"
+			preBufferingTime = 5
+			width= 640
+			height = 360
+			data="http://mint-vmware:3000/system/sources/urls/000/000/176/original/Iron_Man_3_Official_Trailer_2_(2013)_-_Robert_Downey_Jr._Movie_-_HD_www.happybhai.com_Video.mp4?1369771789"
+			>
+ 		</object>
+        </body>
 </html>
